[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Root.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 75 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="RootCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RootCollider"]
shape = SubResource( 1 )

[node name="ColliderGraphic" type="ColorRect" parent="RootCollider"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )

[node name="Cards" type="Node2D" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="Cards"]
position = Vector2( -120, -125 )

[node name="ColorRect" type="ColorRect" parent="Cards/Area2D"]
margin_left = -50.0
margin_top = -75.0
margin_right = 50.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 52, 70 )
mouse_filter = 2
color = Color( 0.780392, 0, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="Cards"]
position = Vector2( 0, -125 )

[node name="ColorRect" type="ColorRect" parent="Cards/Area2D2"]
margin_left = -50.0
margin_top = -75.0
margin_right = 50.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 52, 70 )
mouse_filter = 2
color = Color( 0.780392, 0, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Area2D2"]
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="Cards"]
position = Vector2( 120, -125 )

[node name="ColorRect" type="ColorRect" parent="Cards/Area2D3"]
margin_left = -50.0
margin_top = -75.0
margin_right = 50.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 52, 70 )
mouse_filter = 2
color = Color( 0.780392, 0, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cards/Area2D3"]
shape = SubResource( 2 )

[connection signal="mouse_entered" from="RootCollider" to="." method="_on_RootCollider_mouse_entered"]
[connection signal="mouse_exited" from="RootCollider" to="." method="_on_RootCollider_mouse_exited"]
[connection signal="input_event" from="Cards/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Cards/Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="input_event" from="Cards/Area2D3" to="." method="_on_Area2D3_input_event"]
